--- a/Uebungen HTML CSS Lambo-Preasentation/index.html
+++ b/Uebungen HTML CSS Lambo-Preasentation/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="de">
 <head>
     <meta charset="utf-8">
@@ -13,11 +13,11 @@
         }
         .bild-container {
             background-image: url("bilder/fenomenooo.jpg");
-            background-size: auto;
+            background-size: 250px;
             background-position: center;
             position: relative;
             text-align: center;
-            color:gold;
+            color:darkblue;
         }
         /*
         .bild-container img {
@@ -63,7 +63,12 @@
        <br>
 
 
-      Der Kraft die Geschwindigkeit
+     <strong>  <b>
+
+    Der Kraft die  Geschwindigkeit <br>(Fenomeno) <br>
+
+         Der neue Lamborghini Fenomeno beschleunigt in 2,4 Sekunden von 0 auf 100 km/h.
+     </b> </strong>
     </p>
 </div>
 
@@ -102,7 +107,31 @@
 
         <li><strong>Preis:</strong>
             <span class="value">ab €450.000</span></li>
+
+
     </ul>
 </div>
 </body>
 </html>
+ <div class="gallery">
+     <h2>GALERİ</h2>
+     <div class="images">
+         <div class="image-item" onclick="changeText">
+            <img src="bilder/Screenshot 2025-09-10 131156.png" height="293"
+                                                   width="572"/>
+             <div class="image-caption"></div>
+         </div>
+
+         <div class="image-item" onclick="changeText">
+
+             <img src="bilder/Screenshot 2025-09-10 130821.png" height="344"
+                                                   width="533"/>
+             <div class="image-caption"></div>
+         </div>
+
+         <div class="image-item" onclick="changeText">
+             <img src="https://images.unsplash.com/photo-1544829099-b9a0c07fad1a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Lamborghini Arka">
+             <div class="image-caption"></div>
+         </div>
+     </div>
+ </div>
