--- a/UebungenErsteSeite/pages/index.html
+++ b/UebungenErsteSeite/pages/index.html
@@ -37,3 +37,79 @@
 
 </body>
 </html>
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Klausur</title>
+</head>
+<body>
+<h1>
+    Ich werde eine Klasse erstellen
+</h1>
+<img src="../bilder/Koenigsegg-One_1-1.jpeg" height="731" width="1280"/>
+
+<h2>  Ich werde eine Tabelle erstellen</h2>
+<table>
+    <tr>
+        <th>Spaltenüberschrift 1</th>
+        <th>Spaltenüberschrift 2</th>
+    </tr>
+    <tr>
+        <td>Daten Zelle 1A</td>
+        <td>Daten Zelle 1B</td>
+    </tr>
+    <tr>
+        <td>Daten Zelle 2A</td>
+        <td>Daten Zelle 2B</td>
+    </tr>
+</table>
+<p>
+    <a href="https://de.uefa.com/uefachampionsleague/news/0257-0e91b1880a25-125caaca7dc0-1000--champions-league-ewige-bestenliste-der-torjager/">
+        DENN LINKKKK
+    </a>
+</p>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
