--- a/Uebungen HTML CSS Lambo-Preasentation/Pages/index.html
+++ b/Uebungen HTML CSS Lambo-Preasentation/Pages/index.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         .bild-container {
-            background-image: url("bilder/fenomenooo.jpg");
+            background-image: url("../bilder/fenomenooo.jpg");
             background-size: 250px;
             background-position: center;
             position: relative;
@@ -117,15 +117,15 @@
      <h2>GALERİ</h2>
      <div class="images">
          <div class="image-item" onclick="changeText">
-            <img src="bilder/Screenshot 2025-09-10 131156.png" height="293"
-                                                   width="572"/>
+            <img src="../bilder/Screenshot%202025-09-10%20131156.png" height="293"
+                 width="572"/>
              <div class="image-caption"></div>
          </div>
 
          <div class="image-item" onclick="changeText">
 
-             <img src="bilder/Screenshot 2025-09-10 130821.png" height="344"
-                                                   width="533"/>
+             <img src="../bilder/Screenshot%202025-09-10%20130821.png" height="344"
+                  width="533"/>
              <div class="image-caption"></div>
          </div>
 
