--- a/GridLayoutUebung/pages/index_MaTA.html
+++ b/GridLayoutUebung/pages/index_MaTA.html
@@ -44,7 +44,7 @@
     <div id="picture">
         <a href="https://de.wikipedia.org/wiki/Oculus_Rift_S" target="_blank"><img class="image_round" src="../pictures/ichMitRiftS.jpg" alt="Ich beim Gaming mit meiner Rift S"></a>
     </div>
-    <div class="content">
+    <div class="content p-3">
         <h2>Ahmed hat Lieblingssongs</h2>
         <table class="table table-striped table-hover">
             <thead>
@@ -80,7 +80,7 @@
 
 
     </div>
-    <div class="content">
+    <div class=" p-3">
         <h2>Ahmed hat Familie</h2>
         <div>
             <div class="d-flex justify-content-between">
@@ -96,20 +96,22 @@
         <h2>Was Ahmed schon immer mal loswerden wollte</h2>
         <p>Also Leute,</p>
         <p>was mich ja echt nervt ist Folgendes:<strong>Mich ärgert frühes Aufstehen </strong>ja total.
-            Warum kann die Schule nicht erst um 10 h losgehen? Oder was wäre mit Gleitzeit? Ich meine, wenn
+            Warum kann die Schule nicht erst um 10 h losgehen? Oder was wäre mit <em>Gleitzeit?</em> Ich meine, wenn
             man eine bestimmte Anzahl an Stunden am Tag in die Schule muss, aber kommen kann, wenn man möchte...</p>
     </div>
     <div class="content">
         <h2>Ahmed kann für dich rechnen</h2>
         <form>
             <div class="pt-1">
-                Wie gut Sie dich findet-Schulnote zwischen 1 und 6:
+                <label for="er_sie">Wie gut Sie dich findet-Schulnote zwischen 1 und 6:</label>
+                <input id="er_sie" type="number" min="1" max="6">
             </div>
             <div class="pt-1">
-                Wie gut Sie dich findet-Schulnote zwischen 1 und 6:
+                <label for="sie_ihn">Wie gut Sie dich findet-Schulnote zwischen 1 und 6:</label>
+                <input id="sie_ihn" type="number" min="1" max="6">
             </div>
             <div class="pt-1">
-                <button type="button" XXXXX="durchschnitt()">Liebesglück ermitteln</button>
+                <button type="button" onclick="durchschnitt()">Liebesglück ermitteln</button>
             </div>
             <div class="pt-1">
                 <label for="ergebnis">Eure Glücks-Chance - Schulnote zwischen 1 und 6:</label>
